openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-appui
  labels:
    app: keycloak-appui
    app.kubernetes.io/part-of: appui-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-appui
  template:
    metadata:
      labels:
        app: keycloak-appui
    spec:
      containers:
        - name: keycloak-appui
          image: "image-registry.openshift-image-registry.svc:5000/appui-backend-project/keycloak-appui"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          stdin: true
          serviceAccount: default
      terminationGracePeriodSeconds: 5
