openshift/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak-appui
  name: keycloak-appui
spec:
  ports:
  - name: keycloak-appui
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak-appui
  sessionAffinity: None
  type: ClusterIP
