openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-appui
spec:
  # hostname: foo.apps.CLUSTER.ccs.ornl.gov
  port:
    targetPort: keycloak-appui
#  tls:
#    insecureEdgeTerminationPolicy: Redirect
#    termination: edge
  to:
    kind: Service
    name: keycloak-appui
    weight: 100
  wildcardPolicy: None
